[package]
name = "client-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
futures = "0.3.28"
itertools = "0.13.0"
log = "0.4.20"
rand = "0.8.5"
reqwest = { version = "0.12.4", features = ["json"], optional = true }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sysinfo = "0.30.12"
thiserror = "1.0.49"
url = "2.4.1"

[dev-dependencies]
tokio = { version = "1.32.0", features = [
    "tokio-macros",
    "test-util",
    "macros",
] }

[features]
default = ["actions"]
types = []
client = ["types", "dep:reqwest"]
endpoints = ["client"]
actions = ["endpoints"]
