[package]
name = "lol-custom-game-randomizer"
version = "0.1.1"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
client-api = { path = "../client-api" }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
winres = "0.1"
