[package]
name = "lol-custom-match-history-yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-net = "0.4.0"
icu_collator = "1.3.3"
icu_locid = "1.3.2"
icu_provider = "1.3.2"
serde = { version = "1.0.189", features = ["derive"] }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.64", features = ["HtmlSelectElement"] }
yew = { version = "0.21.0", features = ["csr"] }
