[package]
name = "lol-utilities"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.10.0", features = ["debug", "image", "tokio"] }
eyre = "0.6.8"
client-api = { path = "../client-api" }
log = "0.4.20"
env_logger = "0.10.0"
image = "0.24.7"
