[package]
name = "lol-utilities"
version = "0.1.13"
edition = "2021"
build = "build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.10.0", features = [
    "debug",
    "image",
    "tokio",
    "advanced",
] }
eyre = "0.6.8"
client-api = { path = "../client-api" }
log = "0.4.20"
env_logger = "0.11.3"
image = "0.24.7"

[build-dependencies]
winres = "0.1"
